# w2v_simple

./: Pipfile  calc.py  calc2.py  draw.py  pyproject.toml  similars.py  train.py  wakati.py  wakati_mecab.py  yc_scraper.py
