[project]
name = "gensim_w2v"
version = ""
description = ""
authors = [
    {name = "hjmr", email = "2620990+hjmr@users.noreply.github.com"},
]
dependencies = [
    "matplotlib>=3.6.1",
    "japanize-matplotlib>=1.1.3",
    "mecab>=0.996.3",
    "scikit-learn>=1.1.2",
    "gensim>=4.2.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=22.10.0",
    "pylint>=2.15.4",
]
