[tool.poetry]
name = "gensim_w2v"
version = "0.1.0"
description = ""
authors = ["hjmr <2620990+hjmr@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
gensim = "^4.2.0"
scikit-learn = "^1.2.0"
japanize-matplotlib = "^1.1.3"
mecab = "^0.996.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
